Thu May 12 17:41:00 2005  NARUSE, Yui  <naruse@ruby-lang.org>

        * ext/nkf/nkf-utf8/nkf.c: follow nkf 2.0.5

Thu May 12 16:50:40 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* lib/rdoc/parsers/parse_c.rb: more readability for mixing
	  progress "c..." and warning message.

Thu May 12 15:50:56 2005  Tilman Sauerbeck  <tilman@code-monkey.de>

	* lib/rdoc/parsers/parse_c.rb: show parsing progress for C files.
	  [ruby-core:4341]

Thu May 12 09:53:57 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* version.c (ruby_show_version): flush for non-tty stdout.

Thu May 12 01:23:55 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (unknown_node): ignore broken NODE to get rid of accessing
	  possibly inaccessible address.  fixed: [ruby-dev:26122]
	  should emit more useful information like [ruby-dev:26126], though.

Wed May 11 15:58:39 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (break_jump): break should not cross functions.
	  [ruby-list:40818]

Wed May 11 10:41:54 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* lib/tempfile.rb (Tempfile#unlink): fixed typo.

Wed May 11 01:03:36 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (TMP_ALLOC): use macro NEW_NODE() to get rid of warnings on
	  platforms which have no alloca().  fixed: [ruby-talk:141301]

Sun May  8 23:17:47 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk/timer.rb: fix typo.

Sun May  8 21:00:50 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* hash.c (Init_Hash): remove custom "hash" and "eql?".
	  (ported from 1.8) [ruby-dev:26132]

Sun May  8 16:50:25 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* lib/profiler.rb: fixed "undefined method `[]' for nil:NilClass"
	  [ruby-core:4775] [ruby-talk:140401] [ruby-dev:26118]

Sat May  7 22:58:00 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (have_var): no libs argument is given.

Fri May  6 08:08:37 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>
